--- a/resources/styles.css
+++ b/resources/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
-  background-color: skyblue;
+  background-color: DarkSeaGreen;
 }
 
 .header{
@@ -15,10 +15,15 @@ body {
   padding-left: 15px;
 }
 
+
+nav {
+  font-size: 1.5rem;
+}
+
 a{
   color: white;
   text-decoration: none;
-  margin-right: 10px;
+  margin: 20px; /* equal margin space between all the links */
 }
 
 
@@ -26,15 +31,158 @@ a{
 
 
 .main-image {
-  max-width: 960px;
-  margin: 0 auto;
-  height: 30rem;
-  padding-top: 1rem;
+  max-width: 100%;
+  display:flex;
+  justify-content: center;
 }
-
-
 
 .main-image img {
   width: 30rem;
-  margin: 5rem auto;
+  height:30rem;
+  padding-top: 4rem;
 }
+
+.supporting, .rating, .gallery, .map-section {
+
+  margin: 4rem auto;
+}
+
+/* SUPPORTING SECTION */
+
+.supporting {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.supporting img {
+  margin-left: 2rem;
+  width: 100px;
+  height: 100px;
+  margin-right: 1rem;
+}
+
+.description{
+  margin-right: 2rem;
+}
+
+.description h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+/* RATING SECTION */
+
+.rating {
+  background-color: maroon;
+  color: white;
+  padding-left: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 200px;
+}
+
+/* Here we gave the section of rating a background color change, gave the content
+a padding of 2 rem from the left meanding 32px offset from the left. we display
+the felx items in column direction and we justify the content to the center. Recall
+by making the flex direction column we reverse the x and y axes respectively.
+Thus justify content will refer to veritcal movement of the element and align-items will
+correspond to the horizontal movement. Thus we have vertical alignment of center and
+flex-start alignemnts. We also give this section a height of 200px */
+
+.rating h1{
+  font-size:2.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+/* Here we focus on the h1 flex item, we change its font size apperance and give
+it a margin from the next flex item in the section */
+
+
+/* GALLERY SECTION */
+
+.gallery {
+  display:flex;
+  justify-content: space-between;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.gallery img {
+  height: 300px;
+  width: 400px;
+}
+
+
+.map-section {
+  display:flex;
+  flex-direction: column;
+}
+
+.map-section img {
+  width: 100%;
+  height: 500px;
+  margin-bottom: 1.5rem;
+}
+
+.map-section h1{
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 5rem;
+}
+
+
+/* FOOTER SECTION */
+
+footer{
+  display: flex;
+  background-color: maroon;
+  color: white;
+  justify-content: space-between;
+  align-items: center;
+  height: 200px;
+}
+
+.copyright{
+  padding-left: 2rem;
+  font-size: 1.5rem;
+}
+
+footer nav {
+  padding-right: 2rem;
+}
+
+
+
+@media only screen and (max-width:960px){
+  .main-image{
+    padding-top:0;
+  }
+
+/* For a screen of max-width of 960px or lower,
+we have the main section have no padding space from content to the top*/
+@media only screen and (max-width:700px){
+    .supporting img{
+      display:none;
+    }
+  }
+  /* For screens that are at max-width of 700px or lower,
+  we restrict the supporting image from showing*/
+@media only screen and (max-width:470px){
+    .rating h1{
+      font-size:2rem;
+    }
+    .gallery img {
+  display: block;
+  width: 100%;
+  margin: 0;
+  float: left;
+}
+footer nav{
+   display:none;
+ }
+  }
