--- a/resources/styles.css
+++ b/resources/styles.css
@@ -156,7 +156,7 @@ footer nav {
   padding-right: 2rem;
 }
 
-
+/* For smaller screen devices */
 
 @media only screen and (max-width:960px){
   .main-image{
